[package]
name = "klogger"
version = "0.0.9"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>", "Ankit Bhardwaj <ankitb@cs.utah.edu>"]

description = "Library for logging in kernel mode."
repository = "https://github.com/gz/rust-klogger"

readme = "README.md"
keywords = ["serial", "os", "amd64", "x86"]
license = "MIT OR Apache-2.0"

[dependencies]
x86 = "0.45"
log = "0.4"
termcodes = "0.0.1"
spin = "0.5.2"
heapless = "0.5.1"

[features]
use_ioports = [] # Always use ioports, even when compiling for a UNIX architecture (used by kvmtests)
